--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@types/angular": "^1.6.54",
     "GridFS": "^0.3.0",
     "core-js": "^2.5.4",
+    "file-system": "^2.2.2",
     "ngx-webcam": "^0.2.2",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
