--- a/package.json
+++ b/package.json
@@ -25,11 +25,17 @@
     "@angular/router": "~7.0.0",
     "@types/angular": "^1.6.54",
     "GridFS": "^0.3.0",
+    "angular2-image-upload": "^1.0.0-rc.2",
+    "braces": "^2.3.2",
     "core-js": "^2.5.4",
     "file-system": "^2.2.2",
+    "fs": "0.0.1-security",
     "ngx-webcam": "^0.2.2",
+    "nodejs-base64": "^1.0.3",
+    "path": "^0.12.7",
     "rxjs": "^6.4.0",
     "rxjs-compat": "^6.4.0",
+    "sha256": "^0.2.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -39,7 +45,7 @@
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
